salesforce/force-app/main/default/objects/Marketing_Flow__c/Marketing_Flow__c.object-meta.xml
<CustomObject>
    <description>Tracks Marketing Flows created in MC Advanced from approved journey approvals</description>
    <label>Marketing Flow</label>
    <nameField>
        <displayFormat>MF-{0000}</displayFormat>
        <label>Flow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>