salesforce/force-app/main/default/objects/Marketing_Flow__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact this Marketing Flow is for</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Flows</relationshipLabel>
    <relationshipName>Marketing_Flows</relationshipName>
    <type>Lookup</type>
</CustomField>