salesforce/force-app/main/default/objects/Marketing_Flow__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>The type of meaningful event that triggered this flow</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>