salesforce/force-app/main/default/objects/Marketing_Flow__c/fields/Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>Flow_URL__c</fullName>
    <description>Direct link to the Marketing Flow in MC Advanced</description>
    <label>Flow URL</label>
    <type>Url</type>
</CustomField>