salesforce/force-app/main/default/objects/Marketing_Flow__c/fields/Journey_Id__c.field-meta.xml
<CustomField>
    <fullName>Journey_Id__c</fullName>
    <description>Unique identifier linking to Journey_Approval__c records with the same Journey_Id__c</description>
    <externalId>true</externalId>
    <label>Journey Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>