salesforce/force-app/main/default/objects/Marketing_Flow__c/fields/MC_Flow_Id__c.field-meta.xml
<CustomField>
    <fullName>MC_Flow_Id__c</fullName>
    <description>The MC Advanced Flow ID returned when the flow is created</description>
    <externalId>true</externalId>
    <label>MC Flow Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>