salesforce/force-app/main/default/objects/Marketing_Flow__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>When the flow was sent to MC Advanced</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>