salesforce/force-app/main/default/objects/Marketing_Flow__c/fields/Steps_Count__c.field-meta.xml
<CustomField>
    <fullName>Steps_Count__c</fullName>
    <description>Number of steps in this Marketing Flow</description>
    <label>Steps Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>